--- a/force-app/main/default/classes/WaveMetadataApplication.cls
+++ b/force-app/main/default/classes/WaveMetadataApplication.cls
@@ -5,5 +5,6 @@ public virtual class WaveMetadataApplication {
 	public String dataflowLocation;
 	public String userProfilePicturesUrl;
 	public List<WaveMetadataApplicationObject> objects;
-	public TimeShiftSettings timeShift; 
+	public TimeShiftSettings timeShift;
+	public List<WaveMetadataApplicationEdgemart> edgemarts;
 }
