--- a/force-app/main/default/classes/WaveApplicationEdgemart.cls
+++ b/force-app/main/default/classes/WaveApplicationEdgemart.cls
@@ -1,5 +1,7 @@
 public class WaveApplicationEdgemart {
     public String objectName { get; set; }
+    public String edgemartDeveloperName { get; set; }
+    public String edgemartLabel { get; set; }
     public String edgemartCsvDataUrl { get; set; }
     public String edgemartJsonSchemaUrl { get; set; }
     public String edgemartNodeNameInDataflow { get; set; }
