--- a/force-app/main/default/classes/WaveMetadataApplicationEdgemart.cls
+++ b/force-app/main/default/classes/WaveMetadataApplicationEdgemart.cls
@@ -1,4 +1,6 @@
 public class WaveMetadataApplicationEdgemart {
+    public String edgemartDeveloperName { get; set; }
+    public String edgemartLabel { get; set; }
     public String objectName;
     public String edgemartCsvDataUrl;
     public String edgemartJsonSchemaUrl;
