Fixed issue when objects property not set in JSON metadata. It wasn't updating the ui status

--- a/force-app/main/default/classes/WaveDataManagerController.cls
+++ b/force-app/main/default/classes/WaveDataManagerController.cls
@@ -1389,7 +1389,14 @@ public with sharing class WaveDataManagerController {
 					}
 				}
 			}
-		} 
+		}
+		else {
+			this.currentObjectIndex = 0;
+			this.currentFieldIndex = 0;
+			this.processingObjectsAndFieldsMetadata = false;
+			this.disabledButton = false;
+			this.logMessage('There are no objects and fields to create.');
+		}
 	}
 
 	private void processCurrentRecordType(Boolean startingWithObject){
